refactor: use standardize camelCase response request property
